tests/reject/bad_sub.ul
void main() {
     int x;
     float y = 3.3;

     x = y - 2;
}